2006-05-07  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	PR 27298
	* javax/swing/plaf/basic/BasicTreeUI.java (NodeDimensionsHandler.
	getNodeDimensions): Mind the size of the node icon. (getRowX):
	use totalChildIndent. (TreeExpansionHandler): Set maximal height
	to zero on events. (nullIcon): New field. (getCurrentControlIcon):
	Return nullIcon if there is no other icon. (getNodeIcon): New method.
	(installDefaults): assign totalChildIndent. (installUI): Call
	updateExpandedDescendants. (paintHorizontalPartOfLeg): Rewritten.
	(paintRow): Rewritten. (updateRenderer): Do not set the renderer for
	the tree.

2006-05-06  Sven de Marothy <sven@physto.se>

	Fixed PR27454
	* gnu/java/awt/peer/gtk/GtkImage: (drawPixels,drawPixelsScaled): 
	Check for zero image sizes.
	
2006-05-06  Olivier Jolly  <olivier.jolly@pcedev.com>

	Fixed PR27362
	* java/util/Calendar.java (clear(int)): Forced internal state
	completion before performing a field clearing.

2006-05-06  Olivier Jolly  <olivier.jolly@pcedev.com>

	* java/util/Collections.java(UnmodifiableMap.UnmodifiableEntrySet.
	UnmodifiableMapEntry): New Map.Entry implementation which is immutable.
	(UnmodifiableMap.UnmodifiableEntrySet.iterator,
	UnmodifiableMap.UnmodifiableEntrySet.toArray,
	UnmodifiableMap.UnmodifiableEntrySet.toArray(Object[])): Used
	UnmodifiableMapEntry as part of their return value. 

2006-05-06  Raif S. Naffah  <raif@swiftdsl.com.au>

	* tools/keytool.sh.in: Removed (renamed to keytool.in).
	* tools/jarsigner.in: Removed (renamed to jarsigner.in).
	* tools/Makefile.am: Include jarsigner and keytool classes in tools.zip.
	Generate jarsigner and keytool scripts.
	* tools/keytool.in: New file (renamed from keytool.sh.in).
	* tools/jarsigner.in: New file (renamed from jarsigner.sh.in).
	* tools/.cvsignore: Replaced *.sh with *
	* configure.ac: Replaced tools/*.sh with tools/*.

2006-05-05  Roman Kennke <kennke@aicas.com>

	* java/awt/image/ColorModel.java
	(getNormalizedComponents): Implemented.
